# ProjektAlgorytmySortujace

./: .gitignore
SortingAlgorithms/: CMakeLists.txt
SortingAlgorithms/SortingAlgorithms/: Algorithms.cpp  Algorithms.h  CMakeLists.txt  SortingAlgorithms.cpp  SortingAlgorithms.h
SortingAlgorithms/tests/: CMakeLists.txt  SortingAlgorithmsTest1.cpp
